# Alien-Gateway

./: .gitignore  PR_DESCRIPTION.md  README.md  package-lock.json
.husky/: pre-push
docs/: escrow-legacy-vault-migration.md
gateway-contract/: .gitignore  Cargo.toml
gateway-contract/contracts/auction_contract/: Cargo.toml
gateway-contract/contracts/auction_contract/src/: errors.rs  events.rs  indexed.rs  lib.rs  singleton.rs  storage.rs  test.rs  types.rs
gateway-contract/contracts/auction_contract/test_snapshots/test/: test_auction_full_lifecycle.1.json  test_auction_no_bids_close.1.json  test_claim_not_winner_fails.1.json  test_claim_twice_fails.1.json  test_close_auction_early_fails.1.json  test_create_auction_zero_min_bid_fails.1.json  test_create_duplicate_auction_fails.1.json  test_outbid_self_fails.1.json  test_place_bid_after_close_fails.1.json  test_place_bid_too_low_fails.1.json  test_refund_bid_double_refund_panics.1.json  test_refund_bid_success.1.json  test_refund_bid_winner_rejected.1.json
gateway-contract/contracts/auction_contract/test_snapshots/test/tests/: test_bid_refunded_event_emitted_when_outbid.1.json
gateway-contract/contracts/factory_contract/: Cargo.toml  factory.md
gateway-contract/contracts/factory_contract/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
gateway-contract/contracts/factory_contract/test_snapshots/test/: test_deploy_username_duplicate_fails.1.json
sdk/: jest.config.ts  package-lock.json  package.json
zk/: IMPLEMENTATION_SUMMARY.md  README.md  input.json  package-lock.json  package.json  (+2 more)
(+142 files in other folders)
