[package]
name = "gateway-auction"
version = "0.1.0"
edition = "2021"
description = "Simple auction contract for testing BidRefundedEvent emission"

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

 
